deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azathoth
  labels:
    app.kubernetes.io/name: azathoth
    app.kubernetes.io/part-of: azathoth
